# d4ft3

./: Cargo.toml  README.md  crates.js  index.html  rust-toolchain.toml  search-index.js  settings.html  source-files.js
.github/workflows/: rustdoc.yml
d4ft3/: Cargo.toml
d4ft3-cli/: Cargo.toml
d4ft3-cli/src/: cli.rs  main.rs
d4ft3-ffi/: Cargo.toml  Makefile.toml
d4ft3-ffi/.cargo/: config
d4ft3-ffi/src/: async_ffi.rs  lib.rs
d4ft3-gui/: Cargo.toml
d4ft3-gui/src/: lib.rs
d4ft3/src/: error.rs  json.rs  lib.rs  socket.rs
d4ft3_cli/: all.html  fn.main.html  index.html
d4ft3_cli/cli/: enum.TransferModeOpt.html  fn.parse_cli.html  fn.validate_bind.html  fn.validate_dest.html  fn.validate_u32.html  index.html  sidebar-items.js  struct.Opts.html
d4ft3_gui_flutter/: .metadata  README.md  pubspec.yaml
d4ft3_gui_flutter/android/app/: build.gradle
d4ft3_gui_flutter/ios/Runner/: Info.plist
d4ft3_gui_flutter/ios/Runner.xcodeproj/: project.pbxproj
d4ft3_gui_flutter/lib/: main.dart
d4ft3_gui_flutter/linux/: CMakeLists.txt  my_application.cc
d4ft3_gui_flutter/test/: widget_test.dart
d4ft3_gui_flutter/web/: index.html  manifest.json
d4ft3_gui_flutter/windows/: CMakeLists.txt
d4ft3_gui_flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
d4ft3_gui_flutter/windows/runner/: Runner.rc  main.cpp
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
src/d4ft3_cli/: cli.rs.html  main.rs.html
(+5 files in other folders)
