[package]
name = "d4ft3-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
d4ft3 = { path = "../d4ft3" }
miniquad = { version = "0.3.0-alpha.46", features = ["log-impl"] }
egui = "0.18"
egui-miniquad = "0.11"
egui_demo_lib = "0.18"

[target.'cfg(target_os = "android")'.dependencies]
#ndk = "0.6"
#ndk-glue = { version = "0.6", features = ["logger"] }
ndk-glue = { git = "https://github.com/rust-windowing/android-ndk-rs", features = ["logger"] }
