[package]
name = "d4ft3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10" # 0.10.2
scrypt = "0.10"
rand_chacha = "0.3"
chacha20 = { version = "0.9", features = ["std"] }
enum_dispatch = "0.3"
